# xivo_agent/service/handler/login.py
@@ -30,18 +30,18 @@ class LoginHandler(object):
         self._agent_dao = agent_dao
 
     @debug.trace_duration
-    def handle_login_by_id(self, agent_id, extension, context):
+    def handle_login_by_id(self, agent_id, extension, context, state_interface):
         logger.info('Executing login command (ID %s) on %s@%s', agent_id, extension, context)
         with db_utils.session_scope():
             agent = self._agent_dao.get_agent(agent_id)
-        self._handle_login(agent, extension, context)
+        self._handle_login(agent, extension, context, state_interface)
 
     @debug.trace_duration
-    def handle_login_by_number(self, agent_number, extension, context):
+    def handle_login_by_number(self, agent_number, extension, context, state_interface):
         logger.info('Executing login command (number %s) on %s@%s', agent_number, extension, context)
         with db_utils.session_scope():
             agent = self._agent_dao.get_agent_by_number(agent_number)
-        self._handle_login(agent, extension, context)
+        self._handle_login(agent, extension, context, state_interface)
 
-    def _handle_login(self, agent, extension, context):
-        self._login_manager.login_agent(agent, extension, context)
+    def _handle_login(self, agent, extension, context, state_interface):
+        self._login_manager.login_agent(agent, extension, context, state_interface)
